# basic-django-webapp

./: .gitignore  README.md  pyproject.toml
playground/: urls.py  views.py
playground/templates/: hello.html
storefront/: settings.py  urls.py
