[tool.poetry]
name = "basic-django-webapp"
version = "0.1.0"
description = ""
authors = ["glennlum <glennlum_@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
django-debug-toolbar = "^4.4.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
